--- a/client/main.html
+++ b/client/main.html
@@ -6,7 +6,8 @@
 
 <body>
   <h1>Tracking reproduction</h1>
-  <img src="/logo.svg" />
+  <p><img src="/logo.svg" /></p>
+
 
   {{> tracking}}
 </body>
